[gd_scene load_steps=56 format=2]

[ext_resource path="res://images/warrior_sprites/sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/Warrior.gd" type="Script" id=2]
[ext_resource path="res://audio/sfx/sword_swing.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "attack1"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_atk_sfx"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_enemy"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack2"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 52 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_atk_sfx"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack3"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_atk_sfx"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_enemy"
} ]
}

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "die"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 62, 63, 64, 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 52 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_atk_sfx"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 1 ],
"method": "consume_mp"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "distance_blade"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=8]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 59, 60, 61 ]
}

[sub_resource type="Animation" id=9]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 100, 101, 102 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_atk_sfx"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hit_enemy"
} ]
}

[sub_resource type="Animation" id=12]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=13]
resource_name = "sprint"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 167, 168, 169, 170, 171, 172 ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 5.24972, 15 )

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "attack3"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "crouch"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "distance_blade"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "fall_attack"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "jump_attack"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "sprint"

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachine" id=51]
states/attack1/node = SubResource( 15 )
states/attack1/position = Vector2( 1161.43, 585 )
states/attack2/node = SubResource( 16 )
states/attack2/position = Vector2( 1161.43, 426.482 )
states/attack3/node = SubResource( 17 )
states/attack3/position = Vector2( 1161.43, 279.482 )
states/crouch/node = SubResource( 18 )
states/crouch/position = Vector2( 953, 585 )
states/die/node = SubResource( 19 )
states/die/position = Vector2( 401, 88.9024 )
states/distance_blade/node = SubResource( 20 )
states/distance_blade/position = Vector2( 123.923, 88.9024 )
states/fall/node = SubResource( 21 )
states/fall/position = Vector2( 401, 426.482 )
states/fall_attack/node = SubResource( 22 )
states/fall_attack/position = Vector2( 1161.43, 88.9024 )
states/idle/node = SubResource( 23 )
states/idle/position = Vector2( 679, 279.482 )
states/jump/node = SubResource( 24 )
states/jump/position = Vector2( 401, 279.482 )
states/jump_attack/node = SubResource( 25 )
states/jump_attack/position = Vector2( 906.923, 88.9024 )
states/run/node = SubResource( 26 )
states/run/position = Vector2( 679, 585 )
states/sprint/node = SubResource( 27 )
states/sprint/position = Vector2( 679, 88.9024 )
transitions = [ "idle", "jump", SubResource( 28 ), "idle", "run", SubResource( 29 ), "run", "idle", SubResource( 30 ), "idle", "die", SubResource( 31 ), "idle", "crouch", SubResource( 32 ), "crouch", "idle", SubResource( 33 ), "crouch", "run", SubResource( 34 ), "run", "crouch", SubResource( 35 ), "fall", "idle", SubResource( 36 ), "jump", "fall", SubResource( 37 ), "idle", "sprint", SubResource( 38 ), "sprint", "idle", SubResource( 39 ), "idle", "attack1", SubResource( 40 ), "attack1", "idle", SubResource( 41 ), "attack1", "attack2", SubResource( 42 ), "attack2", "attack3", SubResource( 43 ), "attack3", "idle", SubResource( 44 ), "attack2", "idle", SubResource( 45 ), "idle", "distance_blade", SubResource( 46 ), "distance_blade", "idle", SubResource( 47 ), "idle", "jump_attack", SubResource( 48 ), "fall_attack", "idle", SubResource( 49 ), "jump_attack", "fall_attack", SubResource( 50 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -157.077, -11.1347 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=52]

[node name="Warrior" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 14, 0 )

[node name="PositionCenter" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 23
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 1 )
anims/attack2 = SubResource( 2 )
anims/attack3 = SubResource( 3 )
anims/crouch = SubResource( 4 )
anims/die = SubResource( 5 )
anims/distance_blade = SubResource( 6 )
anims/fall = SubResource( 7 )
anims/hit = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/jump = SubResource( 10 )
anims/jump_attack = SubResource( 11 )
anims/run = SubResource( 12 )
anims/sprint = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 51 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 52 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Skill1Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ManaRecovery" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AnimationDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="timeout" from="Skill1Cooldown" to="." method="_on_Skill1Cooldown_timeout"]
[connection signal="timeout" from="ManaRecovery" to="." method="_on_ManaRecovery_timeout"]
[connection signal="timeout" from="AnimationDelay" to="." method="_on_AnimationDelay_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
